--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
         </div>
     </section>
 
+    <section id="Cool Stuff" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+               <iframe width="800" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiZjI1MDZjZGMtNjNlMy00ZDA2LTkxMmEtMmNhOTVkMDkxMGZlIiwidCI6Ijg0YzMxY2EwLWFjM2ItNGVhZS1hZDExLTUxOWQ4MDIzM2U2ZiIsImMiOjZ9" frameborder="0" allowFullScreen="true"></iframe>
+                
+            </div>
+        </div>
+    </section>
     <!-- Map Section -->
     <div id="map"></div>
 
