--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#download">Projects</a>
                     </li>
                      <li>
-                     <a class="page-scroll" href="#Cool Stuff"><blink>Microsoft ImagineCup2018 Twitter Analysis</blink></a>
+                     <a class="page-scroll" href="#Cool Stuff">Microsoft ImagineCup2018 Twitter Analysis</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
