--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                     <li>
                         <a class="page-scroll" href="#download">Projects</a>
                     </li>
-                     <li>
+                     <li><blink>
                      <a class="page-scroll" href="#Cool Stuff">Microsoft ImagineCup2018 Twitter Analysis</a>
-                    </li>
+                         </blink>
+                         </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
