--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
                     <li>
                         <a class="page-scroll" href="#download">Projects</a>
                     </li>
-                     <li><blink>
+                    <blink>
+                     <li>
                      <a class="page-scroll" href="#Cool Stuff">Microsoft ImagineCup2018 Twitter Analysis</a>
-                         </blink>
+                        
                          </li>
+                         </blink>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
