--- a/Privacy.html
+++ b/Privacy.html
@@ -1,8 +1,8 @@
 <html>
 Privacy Policy 
 
-By using this Bot "botmeet" you can see chat of you and bot only . 
-No any other Identity is Known By Us or We Do not use your Data.
-Bot Is only giving Answer according to his Knowledge and traing.
+<br>ing this Bot "botmeet" you can see chat of you and bot only . 
+<br>No any other Identity is Known By Us or We Do not use your Data.
+<br>Bot Is only giving Answer according to his Knowledge and traing.
 
 </html>
