--- a/Privacy.html
+++ b/Privacy.html
@@ -1,7 +1,8 @@
 <html>
 Privacy Policy 
+  <br>
 
-<br>ing this Bot "botmeet" you can see chat of you and bot only . 
+<br>using this Bot "botmeet" you can see chat of you and bot only . 
 <br>No any other Identity is Known By Us or We Do not use your Data.
 <br>Bot Is only giving Answer according to his Knowledge and traing.
 
