--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <footer>
         <div class="container text-center">
            
-            <a href="https://en.wikipedia.org/wiki/Hacker_culture"><img src="https://stereochro.me/assets/images/glider.png" style="float:right" width="55" height="55" alt="Hacker"></a>
+          <a href='https://www.messenger.com/t/168742703758273'><img src='https://facebook.botframework.com/Content/MessageUs.png'></a>
         </div>
     </footer>
 
