--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
                     <i class="fa fa-play-circle"></i> <span class="light">Meet Patel</span>
+                    <iframe src='https://webchat.botframework.com/embed/botmeet?s=TaK6z5DCVGw.cwA.FvE.f0AZ7uLYBAJDspX9U62P4c6dkTENeZK5yu3YNu8H-40'></iframe>
                 </a>
             </div>
 
