--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <section id="CHATBOT" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-               <iframe src='https://webchat.botframework.com/embed/botmeet?s=TaK6z5DCVGw.cwA.FvE.f0AZ7uLYBAJDspX9U62P4c6dkTENeZK5yu3YNu8H-40'></iframe>
+               <iframe src='https://webchat.botframework.com/embed/botmeet?s=TaK6z5DCVGw.cwA.FvE.f0AZ7uLYBAJDspX9U62P4c6dkTENeZK5yu3YNu8H-40' width="200" height="200"></iframe>
                 
             </div>
         </div>
