--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                     <li>
                         <a class="page-scroll" href="#CHATBOT">CHATBOT</a>
                     </li>
+                     <li>
+                        <a class="page-scroll" href="https://resume.blob.core.windows.net/meetresume/Resume.pdf">Resume</a>
+                    </li>
                     
                  </ul>
             </div>
