--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="">
 
     <title>Meet Patel</title>
+    
+    <iframe src='https://webchat.botframework.com/embed/webbusbot?s=jkh01gdAc0w.aKupXh_2KAkx3qlVeFdbTO0FrwHDgc3N6ktXra4a3KU'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
